Add logging & delete request route
