# internal/restserver/routes.go
@@ -14,6 +14,7 @@ func (s *Server) registerRoutes() *mux.Router {
 	r.Handle("/robots", s.getRobotsHandler()).Methods(http.MethodGet)
 	r.Handle("/requests", s.getRequestsHandler()).Methods(http.MethodGet)
 	r.Handle("/requests", s.postRequestHandler()).Methods(http.MethodPost)
+	r.Handle("/requests/{id}", s.deleteRequestHandler()).Methods(http.MethodDelete)
 
 	return r
 }
